# tetris

./: .gitignore  LICENSE  Makefile  README.md  game.c  game.h  high_score.c  high_score.h  meson.build  pieces.c  pieces.h  readme.md  screen.c  screen.h  tetris  tetris.6  tetris.c  tetris.h  tetris_pieces.h
.github/workflows/: codeql-analysis.yml
arch/: PKGBUILD
include/: game.h  score.h  screen.h
src/: game.c  game.h  pieces.c  pieces.h  score.c  score.h  screen.c  screen.h  tetris.c
